--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure()\n",
+    "plt.figure(figsize=(16, 4))\n",
     "librosa.display.specshow(left_spec)\n",
     "plt.colorbar()\n",
     "plt.show()"
@@ -258,10 +258,10 @@
    "source": [
     "# data split\n",
     "spectrogram_datadir = './datasets/spectrogram_jpg/train'\n",
-    "second = 2 # split in 2 seconds\n",
+    "second = 2.97 # split in 2 seconds\n",
     "for i, track in enumerate(tracks):\n",
     "  number = int(track.audio.T.shape[1] / second / 44100)\n",
-    "  interval = second * 44100\n",
+    "  interval = int(second * 44100)\n",
     "  for j in range(number):\n",
     "    print(\"# {} track: {}th part\".format(i, j))\n",
     "    mixtures = track.audio.T[:, j*interval:(j+1)*interval]\n",
@@ -272,8 +272,6 @@
     "    accompaniments = track.targets['accompaniment'].audio.T[:, j*interval:(j+1)*interval]\n",
     "    \n",
     "    sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
-    "    left_concat = np.zeros(shape=[1025, 173])\n",
-    "    right_concat = np.zeros(shape=[1025, 173])\n",
     "    for k, wave in enumerate(sources):\n",
     "      left_wave = wave[0]\n",
     "      right_wave = wave[1]\n",
@@ -288,13 +286,13 @@
     "        left_concat = np.concatenate((left_concat, left_spec), axis=1)\n",
     "        right_concat = np.concatenate((right_concat, right_spec), axis=1)\n",
     "        \n",
-    "    display.clear_output(wait=True)      \n",
+    "    display.clear_output(wait=True)\n",
     "    filename_l = 'track{}.part{}.left.jpg'.format(i, j)\n",
     "    filename_r = 'track{}.part{}.right.jpg'.format(i, j)\n",
     "    print(filename_l, filename_r)\n",
     "    \n",
-    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_l), left_concat)\n",
-    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_r), right_concat)"
+    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_l), left_concat[:1024,])\n",
+    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_r), right_concat[:1024,])"
    ]
   },
   {
