--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "# Wave to Spectrogram\n",
     "\n",
-    "* 2초 단위로 자른 wav file을 stft(Short-time Fourier Transfromation)를 이용하여 (time, frequency) domain으로 바꿈\n",
-    "* 바꾼 그림을 각각 그림 파일 (jpg)로 저장"
+    "* 11.9초 단위로 자른 wav file을 stft(Short-time Fourier Transfromation)를 이용하여 (time, frequency) domain으로 바꿈\n",
+    "* 바꾼 그림을 각각 그림 파일 (jpg)로 저장\n",
+    "* Singing Voice Separation with Deep U-Net Convolutional Networks 논문 데이터 만드는 방법"
    ]
   },
   {
@@ -146,7 +147,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(left_wave.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(left_stft[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Short-time Fourier Transform\n",
+    "# n_fft: number of samples used to calculate fft\n",
+    "# hop_length: like concept of stride\n",
     "left_stft = librosa.core.stft(left_wave, n_fft=2048, hop_length=512)\n",
     "print(left_stft.shape)\n",
     "print(type(left_stft[0, 0]))"
@@ -172,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spectrogram for standard form"
+    "## Spectrogram using normalize (for maybe standard form)"
    ]
   },
   {
@@ -204,7 +225,8 @@
    "outputs": [],
    "source": [
     "def _stft(y):\n",
-    "  n_fft, hop_length, win_length = 2048, 512, 2048\n",
+    "  #n_fft, hop_length, win_length = 2048, 512, 2048\n",
+    "  n_fft, hop_length, win_length = 1024, 768, 1024\n",
     "  return librosa.stft(y=y, n_fft=n_fft, hop_length=hop_length, win_length=win_length)"
    ]
   },
@@ -258,7 +280,7 @@
    "source": [
     "# data split\n",
     "spectrogram_datadir = './datasets/spectrogram_jpg/train'\n",
-    "second = 2.97 # split in 2 seconds\n",
+    "second = 11.90625 # split in about 11.9 seconds\n",
     "for i, track in enumerate(tracks):\n",
     "  number = int(track.audio.T.shape[1] / second / 44100)\n",
     "  interval = int(second * 44100)\n",
@@ -275,9 +297,13 @@
     "    for k, wave in enumerate(sources):\n",
     "      left_wave = wave[0]\n",
     "      right_wave = wave[1]\n",
+    "      # resampling\n",
+    "      left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
+    "      right_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
     "      \n",
-    "      left_spec = spectrogram(left_wave) # (1025, 173) shape\n",
-    "      right_spec = spectrogram(right_wave) # (1025, 173) shape\n",
+    "      left_spec = spectrogram(left_wave_8192) # (513, 128) shape\n",
+    "      right_spec = spectrogram(right_wave_8192) # (513, 128) shape\n",
+    "      print(left_spec.shape)\n",
     "      \n",
     "      if k == 0:\n",
     "        left_concat = left_spec\n",
@@ -291,8 +317,8 @@
     "    filename_r = 'track{}.part{}.right.jpg'.format(i, j)\n",
     "    print(filename_l, filename_r)\n",
     "    \n",
-    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_l), left_concat[:1024,])\n",
-    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_r), right_concat[:1024,])"
+    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_l), left_concat[:512,])\n",
+    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_r), right_concat[:512,])"
    ]
   },
   {
