change method of saving from jpg to npz format

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Wave to Spectrogram\n",
     "\n",
-    "* 11.9초 단위로 자른 wav file을 stft(Short-time Fourier Transfromation)를 이용하여 (time, frequency) domain으로 바꿈\n",
+    "* 11.999초 단위로 자른 wav file을 stft(Short-time Fourier Transfromation)를 이용하여 (time, frequency) domain으로 바꿈\n",
     "* 바꾼 그림을 각각 그림 파일 (jpg)로 저장\n",
     "* Singing Voice Separation with Deep U-Net Convolutional Networks 논문 데이터 만드는 방법"
    ]
@@ -22,8 +22,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "\n",
-    "import imageio\n",
     "\n",
     "import librosa\n",
     "import librosa.display\n",
@@ -226,7 +224,7 @@
    "source": [
     "def _stft(y):\n",
     "  #n_fft, hop_length, win_length = 2048, 512, 2048\n",
-    "  n_fft, hop_length, win_length = 1024, 768, 1024\n",
+    "  n_fft, hop_length, win_length = 1024, 512, 1024\n",
     "  return librosa.stft(y=y, n_fft=n_fft, hop_length=hop_length, win_length=win_length)"
    ]
   },
@@ -279,8 +277,8 @@
    "outputs": [],
    "source": [
     "# data split\n",
-    "spectrogram_datadir = './datasets/spectrogram_jpg/train'\n",
-    "second = 11.90625 # split in about 11.9 seconds\n",
+    "spectrogram_datadir = './datasets/spectrogram/train'\n",
+    "second = 12 # split in about 11.999 seconds\n",
     "for i, track in enumerate(tracks):\n",
     "  number = int(track.audio.T.shape[1] / second / 44100)\n",
     "  interval = int(second * 44100)\n",
@@ -301,9 +299,8 @@
     "      left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
     "      right_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
     "      \n",
-    "      left_spec = spectrogram(left_wave_8192) # (513, 128) shape\n",
-    "      right_spec = spectrogram(right_wave_8192) # (513, 128) shape\n",
-    "      print(left_spec.shape)\n",
+    "      left_spec = spectrogram(left_wave_8192) # (513, 129) shape\n",
+    "      right_spec = spectrogram(right_wave_8192) # (513, 129) shape\n",
     "      \n",
     "      if k == 0:\n",
     "        left_concat = left_spec\n",
@@ -313,12 +310,12 @@
     "        right_concat = np.concatenate((right_concat, right_spec), axis=1)\n",
     "        \n",
     "    display.clear_output(wait=True)\n",
-    "    filename_l = 'track{}.part{}.left.jpg'.format(i, j)\n",
-    "    filename_r = 'track{}.part{}.right.jpg'.format(i, j)\n",
+    "    filename_l = 'track{}.part{}.left'.format(i, j)\n",
+    "    filename_r = 'track{}.part{}.right'.format(i, j)\n",
     "    print(filename_l, filename_r)\n",
     "    \n",
-    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_l), left_concat[:512,])\n",
-    "    imageio.imwrite(os.path.join(spectrogram_datadir, filename_r), right_concat[:512,])"
+    "    np.savez_compressed(os.path.join(spectrogram_datadir, filename_l), wav=left_concat[:512, :128])\n",
+    "    np.savez_compressed(os.path.join(spectrogram_datadir, filename_r), wav=right_concat[:512, :128])"
    ]
   },
   {
