change tfrecords format

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,7 +28,9 @@
     "import librosa.display\n",
     "import musdb\n",
     "\n",
-    "from IPython import display"
+    "from IPython import display\n",
+    "\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -276,46 +279,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data split\n",
-    "spectrogram_datadir = './datasets/spectrogram/train'\n",
-    "second = 12 # split in about 11.999 seconds\n",
-    "for i, track in enumerate(tracks):\n",
-    "  number = int(track.audio.T.shape[1] / second / 44100)\n",
-    "  interval = int(second * 44100)\n",
-    "  for j in range(number):\n",
-    "    print(\"# {} track: {}th part\".format(i, j))\n",
-    "    mixtures = track.audio.T[:, j*interval:(j+1)*interval]\n",
-    "    vocals = track.targets['vocals'].audio.T[:, j*interval:(j+1)*interval]\n",
-    "    drums = track.targets['drums'].audio.T[:, j*interval:(j+1)*interval]\n",
-    "    basses = track.targets['bass'].audio.T[:, j*interval:(j+1)*interval]\n",
-    "    others = track.targets['other'].audio.T[:, j*interval:(j+1)*interval]\n",
-    "    accompaniments = track.targets['accompaniment'].audio.T[:, j*interval:(j+1)*interval]\n",
-    "    \n",
-    "    sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
-    "    for k, wave in enumerate(sources):\n",
-    "      left_wave = wave[0]\n",
-    "      right_wave = wave[1]\n",
-    "      # resampling\n",
-    "      left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
-    "      right_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
-    "      \n",
-    "      left_spec = spectrogram(left_wave_8192) # (513, 129) shape\n",
-    "      right_spec = spectrogram(right_wave_8192) # (513, 129) shape\n",
-    "      \n",
-    "      if k == 0:\n",
-    "        left_concat = left_spec\n",
-    "        right_concat = right_spec\n",
-    "      else:\n",
-    "        left_concat = np.concatenate((left_concat, left_spec), axis=1)\n",
-    "        right_concat = np.concatenate((right_concat, right_spec), axis=1)\n",
-    "        \n",
-    "    display.clear_output(wait=True)\n",
-    "    filename_l = 'track{}.part{}.left'.format(i, j)\n",
-    "    filename_r = 'track{}.part{}.right'.format(i, j)\n",
-    "    print(filename_l, filename_r)\n",
-    "    \n",
-    "    np.savez_compressed(os.path.join(spectrogram_datadir, filename_l), wav=left_concat[:512, :128])\n",
-    "    np.savez_compressed(os.path.join(spectrogram_datadir, filename_r), wav=right_concat[:512, :128])"
+    "def int64_feature(values):\n",
+    "  \"\"\"Returns a TF-Feature of int64s.\n",
+    "\n",
+    "  Args:\n",
+    "    values: A scalar or list of values.\n",
+    "\n",
+    "  Returns:\n",
+    "    A TF-Feature.\n",
+    "  \"\"\"\n",
+    "  if not isinstance(values, (tuple, list)):\n",
+    "    values = [values]\n",
+    "  return tf.train.Feature(int64_list=tf.train.Int64List(value=values))\n",
+    "\n",
+    "\n",
+    "def bytes_feature(values):\n",
+    "  \"\"\"Returns a TF-Feature of bytes.\n",
+    "\n",
+    "  Args:\n",
+    "    values: A string.\n",
+    "\n",
+    "  Returns:\n",
+    "    A TF-Feature.\n",
+    "  \"\"\"\n",
+    "  return tf.train.Feature(bytes_list=tf.train.BytesList(value=[values]))\n",
+    "\n",
+    "\n",
+    "def float_feature(values):\n",
+    "  \"\"\"Returns a TF-Feature of floats.\n",
+    "\n",
+    "  Args:\n",
+    "    values: A scalar of list of values.\n",
+    "\n",
+    "  Returns:\n",
+    "    A TF-Feature.\n",
+    "  \"\"\"\n",
+    "  if not isinstance(values, (tuple, list)):\n",
+    "    values = [values]\n",
+    "  return tf.train.Feature(float_list=tf.train.FloatList(value=values))"
    ]
   },
   {
@@ -323,7 +324,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "_NUM_SHARDS = 10\n",
+    "def _get_dataset_filename(dataset_dir, split_name, shard_id):\n",
+    "  output_filename = 'spectrogram_%s_%05d-of-%05d.tfrecord' % (\n",
+    "      split_name, shard_id, _NUM_SHARDS)\n",
+    "  return os.path.join(dataset_dir, output_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data split\n",
+    "spectrogram_datadir = './datasets/spectrogram/train'\n",
+    "\n",
+    "N = 100 # number of total examples\n",
+    "num_per_shard = int(N / float(_NUM_SHARDS))\n",
+    "split_name = 'train'\n",
+    "\n",
+    "for shard_id in range(_NUM_SHARDS):\n",
+    "  output_filename = _get_dataset_filename(\n",
+    "            spectrogram_datadir, split_name, shard_id)\n",
+    "  print('Writing', output_filename)\n",
+    "  \n",
+    "  with tf.python_io.TFRecordWriter(output_filename) as writer:\n",
+    "    start_ndx = shard_id * num_per_shard\n",
+    "    end_ndx = min((shard_id+1) * num_per_shard, N)\n",
+    "    \n",
+    "    for i in range(start_ndx, end_ndx):\n",
+    "      sys.stdout.write('\\r>> Converting spectrogram %d/%d shard %d\\n' % (\n",
+    "          i+1, N, shard_id))\n",
+    "      sys.stdout.flush()\n",
+    "      \n",
+    "      mixtures = tracks[i].audio.T\n",
+    "      vocals = tracks[i].targets['vocals'].audio.T\n",
+    "      drums = tracks[i].targets['drums'].audio.T\n",
+    "      basses = tracks[i].targets['bass'].audio.T\n",
+    "      others = tracks[i].targets['other'].audio.T\n",
+    "      accompaniments = tracks[i].targets['accompaniment'].audio.T\n",
+    "      number_of_samples = len(mixtures[0])\n",
+    "      print(\"number_of_samples\", number_of_samples)\n",
+    "\n",
+    "      sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
+    "      for k, wave in enumerate(sources):\n",
+    "        left_wave = wave[0]\n",
+    "        right_wave = wave[1]\n",
+    "        # resampling\n",
+    "        left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
+    "        right_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
+    "\n",
+    "        left_spec = spectrogram(left_wave_8192)\n",
+    "        right_spec = spectrogram(right_wave_8192)\n",
+    "\n",
+    "        if k == 0:\n",
+    "          left_concat = left_spec\n",
+    "          right_concat = right_spec\n",
+    "        else:\n",
+    "          left_concat = np.concatenate((left_concat, left_spec), axis=1)\n",
+    "          right_concat = np.concatenate((right_concat, right_spec), axis=1)\n",
+    "\n",
+    "        left_spec_raw = left_concat[:512,].tostring()\n",
+    "        right_spec_raw = right_concat[:512,].tostring()\n",
+    "\n",
+    "        for spec_raw in [left_spec_raw, right_spec_raw]:\n",
+    "          example = tf.train.Example(\n",
+    "            features=tf.train.Features(\n",
+    "                feature={\n",
+    "                    'spec_raw': bytes_feature(spec_raw),\n",
+    "                    'number_of_samples': int64_feature(number_of_samples),\n",
+    "                }))\n",
+    "          writer.write(example.SerializeToString())"
+   ]
   }
  ],
  "metadata": {
