--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -4,10 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wave to Spectrogram\n",
+    "# Convert wave to spectrogram to tfrecords format\n",
     "\n",
-    "* 11.999초 단위로 자른 wav file을 stft(Short-time Fourier Transfromation)를 이용하여 (time, frequency) domain으로 바꿈\n",
-    "* 바꾼 그림을 각각 그림 파일 (jpg)로 저장\n",
+    "* Sampling down: 44100 -> 8192\n",
+    "* track 단위로 stft를 수행 (train 기준 총 100개의 파일 단위로 fft)\n",
+    "* track 마다 시간이 많이 달라 (20sec ~ 10min for train) track을 일정 구간으로 자름\n",
+    "  * 실제로는 track을 자르지 않고 stft 한 결과인 spectrogram을 time 축으로 자름\n",
+    "* spectrogram의 input_data shape이 (512, 128) 이 되도록 맞춤\n",
+    "* 데이터 하나는 (512, 192) shape의 spectrogram 임\n",
+    "  * 이러면 노래 마지막 부분이 잘리는데 잘리는 부분은 바로 전 part에 merge\n",
+    "  * 그래서 마지막 부분 time_step: 192 < time_step < 384\n",
     "* Singing Voice Separation with Deep U-Net Convolutional Networks 논문 데이터 만드는 방법"
    ]
   },
@@ -49,9 +55,26 @@
    "outputs": [],
    "source": [
     "# load the training tracks\n",
-    "tracks = mus.load_mus_tracks(subsets=['train'])\n",
+    "split_name = 'train'\n",
+    "assert split_name in ['train', 'test']\n",
+    "\n",
+    "tracks = mus.load_mus_tracks(subsets=[split_name])\n",
     "print(type(tracks))\n",
     "print(len(tracks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check for total time (minute, sec) info\n",
+    "# for i, track in enumerate(tracks):\n",
+    "#   sec = track.audio.T.shape[1]/44100\n",
+    "#   minute = int(sec / 60)\n",
+    "#   sec = sec - minute * 60\n",
+    "#   print(\"{}th: {} min {:.2f} sec\".format(i, minute, sec))"
    ]
   },
   {
@@ -71,6 +94,13 @@
    "source": [
     "index = 0\n",
     "print(tracks[index].name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Listen the track"
    ]
   },
   {
@@ -194,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spectrogram using normalize (for maybe standard form)"
+    "## Spectrogram using normalize (for maybe standard method)"
    ]
   },
   {
@@ -274,6 +304,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert to tfrecords format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -325,10 +362,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_NUM_SHARDS = 10\n",
-    "def _get_dataset_filename(dataset_dir, split_name, shard_id):\n",
+    "def _get_dataset_filename(dataset_dir, split_name, shard_id, num_shards):\n",
     "  output_filename = 'spectrogram_%s_%05d-of-%05d.tfrecord' % (\n",
-    "      split_name, shard_id, _NUM_SHARDS)\n",
+    "      split_name, shard_id, num_shards)\n",
     "  return os.path.join(dataset_dir, output_filename)"
    ]
   },
@@ -338,65 +374,126 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data split\n",
-    "spectrogram_datadir = './datasets/spectrogram/train'\n",
+    "def convert_dataset(split_name, dataset_dir, N, num_shards):\n",
+    "  \"\"\"Converts the spectrogram of given tracks to a TFRecord dataset.\n",
     "\n",
-    "N = 100 # number of total examples\n",
-    "num_per_shard = int(N / float(_NUM_SHARDS))\n",
-    "split_name = 'train'\n",
+    "  Args:\n",
+    "    split_name: The name of the dataset, either 'train' or 'validation'.\n",
+    "    dataset_dir: The directory where the converted datasets are stored.\n",
+    "    N: number of total examples # train: 100, test: 50\n",
+    "    num_shards: number of shards\n",
+    "  \"\"\"\n",
+    "  assert split_name in ['train', 'test']\n",
     "\n",
-    "for shard_id in range(_NUM_SHARDS):\n",
-    "  output_filename = _get_dataset_filename(\n",
-    "            spectrogram_datadir, split_name, shard_id)\n",
-    "  print('Writing', output_filename)\n",
+    "  # data split\n",
+    "  spectrogram_datadir = os.path.join(dataset_dir, split_name)\n",
+    "  print(spectrogram_datadir)\n",
     "  \n",
-    "  with tf.python_io.TFRecordWriter(output_filename) as writer:\n",
-    "    start_ndx = shard_id * num_per_shard\n",
-    "    end_ndx = min((shard_id+1) * num_per_shard, N)\n",
-    "    \n",
-    "    for i in range(start_ndx, end_ndx):\n",
-    "      sys.stdout.write('\\r>> Converting spectrogram %d/%d shard %d\\n' % (\n",
-    "          i+1, N, shard_id))\n",
-    "      sys.stdout.flush()\n",
-    "      \n",
-    "      mixtures = tracks[i].audio.T\n",
-    "      vocals = tracks[i].targets['vocals'].audio.T\n",
-    "      drums = tracks[i].targets['drums'].audio.T\n",
-    "      basses = tracks[i].targets['bass'].audio.T\n",
-    "      others = tracks[i].targets['other'].audio.T\n",
-    "      accompaniments = tracks[i].targets['accompaniment'].audio.T\n",
-    "      number_of_samples = len(mixtures[0])\n",
-    "      print(\"number_of_samples\", number_of_samples)\n",
+    "  num_per_shard = int(N / float(num_shards))\n",
     "\n",
-    "      sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
-    "      for k, wave in enumerate(sources):\n",
-    "        left_wave = wave[0]\n",
-    "        right_wave = wave[1]\n",
-    "        # resampling\n",
-    "        left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
-    "        right_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
+    "  for shard_id in range(num_shards):\n",
+    "    output_filename = _get_dataset_filename(\n",
+    "              spectrogram_datadir, split_name, shard_id, num_shards)\n",
+    "    print('Writing', output_filename)\n",
     "\n",
-    "        left_spec = spectrogram(left_wave_8192)\n",
-    "        right_spec = spectrogram(right_wave_8192)\n",
+    "    # step 1\n",
+    "    with tf.python_io.TFRecordWriter(output_filename) as tfrecord_writer:\n",
+    "      start_ndx = shard_id * num_per_shard\n",
+    "      end_ndx = min((shard_id+1) * num_per_shard, N)\n",
     "\n",
-    "        if k == 0:\n",
-    "          left_concat = left_spec\n",
-    "          right_concat = right_spec\n",
-    "        else:\n",
-    "          left_concat = np.concatenate((left_concat, left_spec), axis=1)\n",
-    "          right_concat = np.concatenate((right_concat, right_spec), axis=1)\n",
+    "      for i in range(start_ndx, end_ndx):\n",
+    "        sys.stdout.write('\\r>> Converting spectrogram %d/%d shard %d\\n' % (\n",
+    "            i+1, N, shard_id))\n",
+    "        sys.stdout.flush()\n",
     "\n",
-    "        left_spec_raw = left_concat[:512,].tostring()\n",
-    "        right_spec_raw = right_concat[:512,].tostring()\n",
+    "        mixtures = tracks[i].audio.T\n",
+    "        vocals = tracks[i].targets['vocals'].audio.T\n",
+    "        drums = tracks[i].targets['drums'].audio.T\n",
+    "        basses = tracks[i].targets['bass'].audio.T\n",
+    "        others = tracks[i].targets['other'].audio.T\n",
+    "        accompaniments = tracks[i].targets['accompaniment'].audio.T\n",
+    "        number_of_samples = len(mixtures[0])        \n",
     "\n",
-    "        for spec_raw in [left_spec_raw, right_spec_raw]:\n",
-    "          example = tf.train.Example(\n",
-    "            features=tf.train.Features(\n",
-    "                feature={\n",
-    "                    'spec_raw': bytes_feature(spec_raw),\n",
-    "                    'number_of_samples': int64_feature(number_of_samples),\n",
-    "                }))\n",
-    "          writer.write(example.SerializeToString())"
+    "        sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
+    "        for k, wave in enumerate(sources):\n",
+    "          left_wave = wave[0]\n",
+    "          right_wave = wave[1]\n",
+    "          # resampling\n",
+    "          left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
+    "          right_wave_8192 = librosa.resample(right_wave, orig_sr=44100, target_sr=8192)\n",
+    "\n",
+    "          left_spec = np.expand_dims(spectrogram(left_wave_8192), axis=2)\n",
+    "          right_spec = np.expand_dims(spectrogram(right_wave_8192), axis=2)\n",
+    "\n",
+    "          if k == 0:\n",
+    "            left_spec_concat = left_spec\n",
+    "            right_spec_concat = right_spec\n",
+    "          else:\n",
+    "            left_spec_concat = np.concatenate((left_spec_concat, left_spec), axis=2)\n",
+    "            right_spec_concat = np.concatenate((right_spec_concat, right_spec), axis=2)\n",
+    "\n",
+    "          time_step_for_example = 192\n",
+    "          num_split = int(left_spec_concat.shape[1] / time_step_for_example) # time_step: 192 for one data\n",
+    "\n",
+    "          print(\"{}th data; shape: {}, num_split: {}\".format(i, left_spec_concat.shape, num_split))\n",
+    "\n",
+    "        channle_info = [b'left', b'right']\n",
+    "        for channel_index, spec_concat in enumerate([left_spec_concat, right_spec_concat]):\n",
+    "          for split_index in range(num_split-1):\n",
+    "            # step 2\n",
+    "            spec_raw = spec_concat[:512, split_index*time_step_for_example:(split_index+1)*time_step_for_example]\n",
+    "            frequency_bin = spec_raw.shape[0]\n",
+    "            time_step = spec_raw.shape[1]\n",
+    "            spec_raw = spec_raw.tostring()\n",
+    "            channel = channle_info[channel_index]\n",
+    "            print(\"{}th track; {}th split\".format(i, split_index))\n",
+    "\n",
+    "            # step 3:\n",
+    "            features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw),\n",
+    "                                                  'frequency_bin': int64_feature(frequency_bin),\n",
+    "                                                  'time_step': int64_feature(time_step),\n",
+    "                                                  'channel': bytes_feature(spec_raw),\n",
+    "                                                 })\n",
+    "\n",
+    "            # step 4\n",
+    "            example = tf.train.Example(features=features)\n",
+    "\n",
+    "            # step 5\n",
+    "            tfrecord_writer.write(example.SerializeToString())\n",
+    "\n",
+    "          # merge between last split part and residual part\n",
+    "          # step 2\n",
+    "          spec_raw = spec_concat[:512, (split_index+1)*time_step_for_example:]\n",
+    "          frequency_bin = spec_raw.shape[0]\n",
+    "          time_step = spec_raw.shape[1]\n",
+    "          spec_raw = spec_raw.tostring()\n",
+    "          channel = channle_info[channel_index]\n",
+    "          print(\"{}th track; {}th split\".format(i, split_index+1))\n",
+    "\n",
+    "          # step 3:\n",
+    "          features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw),\n",
+    "                                                'frequency_bin': int64_feature(frequency_bin),\n",
+    "                                                'time_step': int64_feature(time_step),\n",
+    "                                                'channel': bytes_feature(spec_raw),\n",
+    "                                               })\n",
+    "\n",
+    "          # step 4\n",
+    "          example = tf.train.Example(features=features)\n",
+    "\n",
+    "          # step 5\n",
+    "          tfrecord_writer.write(example.SerializeToString())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectrogram_data_dir = './datasets/spectrogram'\n",
+    "NUM_SHARDS = 20 # for train: 20, for test: 10\n",
+    "N = 100 # for train: 100, for test: 50\n",
+    "convert_dataset(split_name, spectrogram_data_dir, N, NUM_SHARDS)"
    ]
   }
  ],
