change typo channel argument (spec_raw -> channel)

--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -424,6 +424,8 @@
     "\n",
     "          left_spec = np.expand_dims(spectrogram(left_wave_8192), axis=2)\n",
     "          right_spec = np.expand_dims(spectrogram(right_wave_8192), axis=2)\n",
+    "          \n",
+    "          left_spec\n",
     "\n",
     "          if k == 0:\n",
     "            left_spec_concat = left_spec\n",
@@ -440,19 +442,21 @@
     "        channle_info = [b'left', b'right']\n",
     "        for channel_index, spec_concat in enumerate([left_spec_concat, right_spec_concat]):\n",
     "          for split_index in range(num_split-1):\n",
+    "            if split_index > 0:\n",
+    "              break\n",
     "            # step 2\n",
     "            spec_raw = spec_concat[:512, split_index*time_step_for_example:(split_index+1)*time_step_for_example]\n",
     "            frequency_bin = spec_raw.shape[0]\n",
     "            time_step = spec_raw.shape[1]\n",
-    "            spec_raw = spec_raw.tostring()\n",
+    "            spec_raw_string = spec_raw.tostring()\n",
     "            channel = channle_info[channel_index]\n",
     "            print(\"{}th track; {}th split\".format(i, split_index))\n",
     "\n",
     "            # step 3:\n",
-    "            features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw),\n",
+    "            features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw_string),\n",
     "                                                  'frequency_bin': int64_feature(frequency_bin),\n",
     "                                                  'time_step': int64_feature(time_step),\n",
-    "                                                  'channel': bytes_feature(spec_raw),\n",
+    "                                                  'channel': bytes_feature(channel),\n",
     "                                                 })\n",
     "\n",
     "            # step 4\n",
@@ -466,15 +470,15 @@
     "          spec_raw = spec_concat[:512, (split_index+1)*time_step_for_example:]\n",
     "          frequency_bin = spec_raw.shape[0]\n",
     "          time_step = spec_raw.shape[1]\n",
-    "          spec_raw = spec_raw.tostring()\n",
+    "          spec_raw_string = spec_raw.tostring()\n",
     "          channel = channle_info[channel_index]\n",
     "          print(\"{}th track; {}th split\".format(i, split_index+1))\n",
     "\n",
     "          # step 3:\n",
-    "          features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw),\n",
+    "          features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw_string),\n",
     "                                                'frequency_bin': int64_feature(frequency_bin),\n",
     "                                                'time_step': int64_feature(time_step),\n",
-    "                                                'channel': bytes_feature(spec_raw),\n",
+    "                                                'channel': bytes_feature(channel),\n",
     "                                               })\n",
     "\n",
     "          # step 4\n",
@@ -491,8 +495,8 @@
    "outputs": [],
    "source": [
     "spectrogram_data_dir = './datasets/spectrogram'\n",
-    "NUM_SHARDS = 20 # for train: 20, for test: 10\n",
-    "N = 100 # for train: 100, for test: 50\n",
+    "NUM_SHARDS = 10 # for train: 20, for test: 10\n",
+    "N = 10 # for train: 100, for test: 50\n",
     "convert_dataset(split_name, spectrogram_data_dir, N, NUM_SHARDS)"
    ]
   }
