add example features

--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -455,6 +455,8 @@
     "                                                  'frequency_bin': int64_feature(frequency_bin),\n",
     "                                                  'time_step': int64_feature(time_step),\n",
     "                                                  'channel': bytes_feature(channel),\n",
+    "                                                  'track_number': int64_feature(i),\n",
+    "                                                  'split_number': int64_feature(split_index),\n",
     "                                                 })\n",
     "\n",
     "            # step 4\n",
@@ -477,6 +479,8 @@
     "                                                'frequency_bin': int64_feature(frequency_bin),\n",
     "                                                'time_step': int64_feature(time_step),\n",
     "                                                'channel': bytes_feature(channel),\n",
+    "                                                'track_number': int64_feature(i),\n",
+    "                                                'split_number': int64_feature(split_index+1),\n",
     "                                               })\n",
     "\n",
     "          # step 4\n",
