update the modelx

--- a/voice_separation_U-net.ipynb
+++ b/voice_separation_U-net.ipynb
@@ -462,14 +462,7 @@
     "                      global_step=tf.train.get_or_create_global_step())\n",
     "\n",
     "  loss_history.append(loss_value.numpy())\n",
-    "  print(loss_value.numpy())\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "  \n",
-    "\n",
-    "  "
+    "  print(loss_value.numpy())"
    ]
   },
   {
