--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -4,17 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert wave to spectrogram to tfrecords format\n",
+    "# Convert wave to tfrecords format\n",
     "\n",
-    "* Sampling down: 44100 -> 8192\n",
-    "* track 단위로 stft를 수행 (train 기준 총 100개의 파일 단위로 fft)\n",
-    "* track 마다 시간이 많이 달라 (20sec ~ 10min for train) track을 일정 구간으로 자름\n",
-    "  * 실제로는 track을 자르지 않고 stft 한 결과인 spectrogram을 time 축으로 자름\n",
-    "* spectrogram의 input_data shape이 (512, 128) 이 되도록 맞춤\n",
-    "* 데이터 하나는 (512, 192) shape의 spectrogram 임\n",
-    "  * 이러면 노래 마지막 부분이 잘리는데 잘리는 부분은 바로 전 part에 merge\n",
-    "  * 그래서 마지막 부분 time_step: 192 < time_step < 384\n",
-    "* Singing Voice Separation with Deep U-Net Convolutional Networks 논문 데이터 만드는 방법"
+    "* Sampling down: 44100Hz\n",
+    "* musdb data\n",
+    "  * `train_data`: 100 tracks\n",
+    "    * the shortest time track: 12.91 sec for 66th track\n",
+    "    * the largest time track: 628.38 sec for 51th track\n",
+    "  * `test_data`: 50 tracks\n",
+    "    * the shortest time track: 76.00 sec for 29th track\n",
+    "    * the largest time track: 430.20 sec for 15th track\n",
+    "* So, I will split wave files into `5 second` segments\n",
+    "  * for example, track = 17 sec\n",
+    "  * part1: [0:5] sec, part2: [5:10] sec, part3: [10:17] sec\n",
+    "  * add ramainder part (last 2sec segmentation) to last part"
    ]
   },
   {
@@ -70,11 +73,20 @@
    "outputs": [],
    "source": [
     "# check for total time (minute, sec) info\n",
+    "# min_sec = 1000.0\n",
+    "# max_sec = 0.0\n",
     "# for i, track in enumerate(tracks):\n",
-    "#   sec = track.audio.T.shape[1]/44100\n",
+    "#   sec = track.audio.T.shape[1] / 44100\n",
+    "#   if sec < min_sec:\n",
+    "#     min_sec = sec\n",
+    "#   if sec > max_sec:\n",
+    "#     max_sec = sec\n",
+    "  \n",
     "#   minute = int(sec / 60)\n",
     "#   sec = sec - minute * 60\n",
-    "#   print(\"{}th: {} min {:.2f} sec\".format(i, minute, sec))"
+    "#   print(\"{}th: {} min {:.2f} sec\".format(i, minute, sec))\n",
+    "# print(\"the shortest time track: {:.2f} sec\".format(min_sec))\n",
+    "# print(\"the largest time track: {:.2f} sec\".format(max_sec))"
    ]
   },
   {
@@ -152,9 +164,7 @@
     "# Separate to left and right channels\n",
     "second = 10\n",
     "left_wave = tracks[index].audio.T[0][:44100 * second]\n",
-    "left_wave /= max(abs(left_wave))\n",
-    "right_wave = tracks[index].audio.T[1][:44100 * second]\n",
-    "right_wave /= max(abs(right_wave))"
+    "right_wave = tracks[index].audio.T[1][:44100 * second]"
    ]
   },
   {
@@ -187,21 +197,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(left_stft[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Short-time Fourier Transform\n",
     "# n_fft: number of samples used to calculate fft\n",
     "# hop_length: like concept of stride\n",
     "left_stft = librosa.core.stft(left_wave, n_fft=2048, hop_length=512)\n",
     "print(left_stft.shape)\n",
-    "print(type(left_stft[0, 0]))"
+    "print(type(left_stft[0, 0]))\n",
+    "print(left_stft[1, 1])"
    ]
   },
   {
@@ -233,8 +235,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_level_db = -100\n",
-    "ref_level_db = 20"
+    "# based on Tacotron\n",
+    "#min_level_db = -100\n",
+    "#ref_level_db = 20\n",
+    "# our suggestion\n",
+    "min_level_db = -110\n",
+    "ref_level_db = 40"
    ]
   },
   {
@@ -363,7 +369,7 @@
    "outputs": [],
    "source": [
     "def _get_dataset_filename(dataset_dir, split_name, shard_id, num_shards):\n",
-    "  output_filename = 'spectrogram_%s_%05d-of-%05d.tfrecord' % (\n",
+    "  output_filename = 'wav_%s_%05d-of-%05d.tfrecord' % (\n",
     "      split_name, shard_id, num_shards)\n",
     "  return os.path.join(dataset_dir, output_filename)"
    ]
@@ -375,7 +381,7 @@
    "outputs": [],
    "source": [
     "def convert_dataset(split_name, dataset_dir, N, num_shards):\n",
-    "  \"\"\"Converts the spectrogram of given tracks to a TFRecord dataset.\n",
+    "  \"\"\"Converts the wav of given tracks to a TFRecord dataset.\n",
     "\n",
     "  Args:\n",
     "    split_name: The name of the dataset, either 'train' or 'validation'.\n",
@@ -386,14 +392,16 @@
     "  assert split_name in ['train', 'test']\n",
     "\n",
     "  # data split\n",
-    "  spectrogram_datadir = os.path.join(dataset_dir, split_name)\n",
-    "  print(spectrogram_datadir)\n",
+    "  dataset_path = os.path.join(dataset_dir, split_name)\n",
+    "  print(dataset_path)\n",
+    "  if not tf.gfile.Exists(dataset_path):\n",
+    "    tf.gfile.MakeDirs(dataset_path)\n",
     "  \n",
     "  num_per_shard = int(N / float(num_shards))\n",
     "\n",
     "  for shard_id in range(num_shards):\n",
     "    output_filename = _get_dataset_filename(\n",
-    "              spectrogram_datadir, split_name, shard_id, num_shards)\n",
+    "              dataset_path, split_name, shard_id, num_shards)\n",
     "    print('Writing', output_filename)\n",
     "\n",
     "    # step 1\n",
@@ -402,7 +410,7 @@
     "      end_ndx = min((shard_id+1) * num_per_shard, N)\n",
     "\n",
     "      for i in range(start_ndx, end_ndx):\n",
-    "        sys.stdout.write('\\r>> Converting spectrogram %d/%d shard %d\\n' % (\n",
+    "        sys.stdout.write('\\r>> Converting wave %d/%d shard %d\\n' % (\n",
     "            i+1, N, shard_id))\n",
     "        sys.stdout.flush()\n",
     "\n",
@@ -412,82 +420,72 @@
     "        basses = tracks[i].targets['bass'].audio.T\n",
     "        others = tracks[i].targets['other'].audio.T\n",
     "        accompaniments = tracks[i].targets['accompaniment'].audio.T\n",
-    "        number_of_samples = len(mixtures[0])        \n",
+    "        \n",
+    "        num_channels, number_of_samples = mixtures.shape\n",
+    "        assert (num_channels, number_of_samples) == vocals.shape\n",
+    "        assert (num_channels, number_of_samples) == drums.shape\n",
+    "        assert (num_channels, number_of_samples) == basses.shape\n",
+    "        assert (num_channels, number_of_samples) == others.shape\n",
+    "        assert (num_channels, number_of_samples) == accompaniments.shape\n",
     "\n",
     "        sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
-    "        for k, wave in enumerate(sources):\n",
-    "          left_wave = wave[0]\n",
-    "          right_wave = wave[1]\n",
-    "          # resampling\n",
-    "          left_wave_8192 = librosa.resample(left_wave, orig_sr=44100, target_sr=8192)\n",
-    "          right_wave_8192 = librosa.resample(right_wave, orig_sr=44100, target_sr=8192)\n",
+    "        time_step_for_one_example = 44100 * 5 # 5 sec for one example\n",
+    "        num_split = int(number_of_samples / time_step_for_one_example)\n",
+    "        print(\"{}th track; num_split: {}\".format(i, num_split))\n",
     "\n",
-    "          left_spec = np.expand_dims(spectrogram(left_wave_8192), axis=2)\n",
-    "          right_spec = np.expand_dims(spectrogram(right_wave_8192), axis=2)\n",
-    "          \n",
-    "          left_spec\n",
-    "\n",
-    "          if k == 0:\n",
-    "            left_spec_concat = left_spec\n",
-    "            right_spec_concat = right_spec\n",
-    "          else:\n",
-    "            left_spec_concat = np.concatenate((left_spec_concat, left_spec), axis=2)\n",
-    "            right_spec_concat = np.concatenate((right_spec_concat, right_spec), axis=2)\n",
-    "\n",
-    "          time_step_for_example = 192\n",
-    "          num_split = int(left_spec_concat.shape[1] / time_step_for_example) # time_step: 192 for one data\n",
-    "\n",
-    "          print(\"{}th data; shape: {}, num_split: {}\".format(i, left_spec_concat.shape, num_split))\n",
-    "\n",
-    "        channle_info = [b'left', b'right']\n",
-    "        for channel_index, spec_concat in enumerate([left_spec_concat, right_spec_concat]):\n",
-    "          for split_index in range(num_split-1):\n",
-    "            # step 2\n",
-    "            spec_raw = spec_concat[:512, split_index*time_step_for_example:(split_index+1)*time_step_for_example]\n",
-    "            frequency_bin = spec_raw.shape[0]\n",
-    "            time_step = spec_raw.shape[1]\n",
-    "            spec_raw_string = spec_raw.tostring()\n",
-    "            channel = channle_info[channel_index]\n",
-    "            print(\"{}th track; {}th split\".format(i, split_index))\n",
-    "\n",
-    "            # step 3:\n",
-    "            features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw_string),\n",
-    "                                                  'frequency_bin': int64_feature(frequency_bin),\n",
-    "                                                  'time_step': int64_feature(time_step),\n",
-    "                                                  'channel': bytes_feature(channel),\n",
-    "                                                  'track_number': int64_feature(i),\n",
-    "                                                  'split_number': int64_feature(split_index),\n",
-    "                                                 })\n",
-    "\n",
-    "            # step 4\n",
-    "            example = tf.train.Example(features=features)\n",
-    "\n",
-    "            # step 5\n",
-    "            tfrecord_writer.write(example.SerializeToString())\n",
-    "\n",
-    "          # merge between last split part and residual part\n",
+    "        for split_index in range(num_split-1):\n",
+    "          if split_index > 0:\n",
+    "            break\n",
     "          # step 2\n",
-    "          spec_raw = spec_concat[:512, (split_index+1)*time_step_for_example:]\n",
-    "          frequency_bin = spec_raw.shape[0]\n",
-    "          time_step = spec_raw.shape[1]\n",
-    "          spec_raw_string = spec_raw.tostring()\n",
-    "          channel = channle_info[channel_index]\n",
-    "          print(\"{}th track; {}th split\".format(i, split_index+1))\n",
+    "          for k, wav in enumerate(sources):\n",
+    "            wav_split = wav[:, split_index*time_step_for_one_example:(split_index+1)*time_step_for_one_example]\n",
+    "            if k < 1:\n",
+    "              wav_concat = np.expand_dims(wav_split, axis=0)\n",
+    "            else:\n",
+    "              wav_concat = np.concatenate((wav_concat, np.expand_dims(wav_split, axis=0)), axis=0)\n",
+    "          \n",
+    "          time_step = wav_concat.shape[2]\n",
+    "          wav_concat_string = wav_concat.tostring()\n",
+    "          print(\"{}th track; {}th split: wav_shape: {}\".format(i, split_index, wav_concat.shape))\n",
     "\n",
     "          # step 3:\n",
-    "          features = tf.train.Features(feature={'spec_raw': bytes_feature(spec_raw_string),\n",
-    "                                                'frequency_bin': int64_feature(frequency_bin),\n",
+    "          features = tf.train.Features(feature={'wav_concat': bytes_feature(wav_concat_string),\n",
     "                                                'time_step': int64_feature(time_step),\n",
-    "                                                'channel': bytes_feature(channel),\n",
     "                                                'track_number': int64_feature(i),\n",
-    "                                                'split_number': int64_feature(split_index+1),\n",
+    "                                                'split_number': int64_feature(split_index),\n",
     "                                               })\n",
     "\n",
     "          # step 4\n",
     "          example = tf.train.Example(features=features)\n",
     "\n",
     "          # step 5\n",
-    "          tfrecord_writer.write(example.SerializeToString())"
+    "          tfrecord_writer.write(example.SerializeToString())\n",
+    "\n",
+    "        # merge between last split part and residual part\n",
+    "        # step 2\n",
+    "        for k, wav in enumerate(sources):\n",
+    "          wav_split = wav[:, (split_index+1)*time_step_for_one_example:]\n",
+    "          if k < 1:\n",
+    "            wav_concat = np.expand_dims(wav_split, axis=0)\n",
+    "          else:\n",
+    "            wav_concat = np.concatenate((wav_concat, np.expand_dims(wav_split, axis=0)), axis=0)\n",
+    "          \n",
+    "        time_step = wav_concat.shape[2]\n",
+    "        wav_concat_string = wav_concat.tostring()\n",
+    "        print(\"{}th track; {}th split: wav_shape: {}\".format(i, split_index+1, wav_concat.shape))\n",
+    "\n",
+    "        # step 3:\n",
+    "        features = tf.train.Features(feature={'wav_concat': bytes_feature(wav_concat_string),\n",
+    "                                              'time_step': int64_feature(time_step),\n",
+    "                                              'track_number': int64_feature(i),\n",
+    "                                              'split_number': int64_feature(split_index+1),\n",
+    "                                             })\n",
+    "\n",
+    "        # step 4\n",
+    "        example = tf.train.Example(features=features)\n",
+    "\n",
+    "        # step 5\n",
+    "        tfrecord_writer.write(example.SerializeToString())"
    ]
   },
   {
@@ -496,10 +494,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectrogram_data_dir = './datasets/spectrogram'\n",
-    "NUM_SHARDS = 20 # for train: 20, for test: 10\n",
-    "N = 100 # for train: 100, for test: 50\n",
-    "convert_dataset(split_name, spectrogram_data_dir, N, NUM_SHARDS)"
+    "tfrecords_dir = './datasets/tfrecords'\n",
+    "NUM_SHARDS = 5 # for train: 20, for test: 10\n",
+    "N = 5 # for train: 100, for test: 50\n",
+    "convert_dataset(split_name, tfrecords_dir, N, NUM_SHARDS)"
    ]
   }
  ],
