change minor typo

--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -397,8 +397,10 @@
     "  if not tf.gfile.Exists(dataset_path):\n",
     "    tf.gfile.MakeDirs(dataset_path)\n",
     "  \n",
+    "  # for data suffling\n",
+    "  permutation_track_number = np.random.permutation(N)\n",
+    "  \n",
     "  num_per_shard = int(N / float(num_shards))\n",
-    "\n",
     "  for shard_id in range(num_shards):\n",
     "    output_filename = _get_dataset_filename(\n",
     "              dataset_path, split_name, shard_id, num_shards)\n",
@@ -414,12 +416,12 @@
     "            i+1, N, shard_id))\n",
     "        sys.stdout.flush()\n",
     "\n",
-    "        mixtures = tracks[i].audio.T\n",
-    "        vocals = tracks[i].targets['vocals'].audio.T\n",
-    "        drums = tracks[i].targets['drums'].audio.T\n",
-    "        basses = tracks[i].targets['bass'].audio.T\n",
-    "        others = tracks[i].targets['other'].audio.T\n",
-    "        accompaniments = tracks[i].targets['accompaniment'].audio.T\n",
+    "        mixtures = tracks[permutation_track_number[i]].audio.T\n",
+    "        vocals = tracks[permutation_track_number[i]].targets['vocals'].audio.T\n",
+    "        drums = tracks[permutation_track_number[i]].targets['drums'].audio.T\n",
+    "        basses = tracks[permutation_track_number[i]].targets['bass'].audio.T\n",
+    "        others = tracks[permutation_track_number[i]].targets['other'].audio.T\n",
+    "        accompaniments = tracks[permutation_track_number[i]].targets['accompaniment'].audio.T\n",
     "        \n",
     "        num_channels, number_of_samples = mixtures.shape\n",
     "        assert (num_channels, number_of_samples) == vocals.shape\n",
@@ -434,8 +436,6 @@
     "        print(\"{}th track; num_split: {}\".format(i, num_split))\n",
     "\n",
     "        for split_index in range(num_split-1):\n",
-    "          if split_index > 0:\n",
-    "            break\n",
     "          # step 2\n",
     "          for k, wav in enumerate(sources):\n",
     "            wav_split = wav[:, split_index*time_step_for_one_example:(split_index+1)*time_step_for_one_example]\n",
@@ -451,7 +451,7 @@
     "          # step 3:\n",
     "          features = tf.train.Features(feature={'wav_concat': bytes_feature(wav_concat_string),\n",
     "                                                'time_step': int64_feature(time_step),\n",
-    "                                                'track_number': int64_feature(i),\n",
+    "                                                'track_number': int64_feature(permutation_track_number[i]),\n",
     "                                                'split_number': int64_feature(split_index),\n",
     "                                               })\n",
     "\n",
@@ -477,7 +477,7 @@
     "        # step 3:\n",
     "        features = tf.train.Features(feature={'wav_concat': bytes_feature(wav_concat_string),\n",
     "                                              'time_step': int64_feature(time_step),\n",
-    "                                              'track_number': int64_feature(i),\n",
+    "                                              'track_number': int64_feature(permutation_track_number[i]),\n",
     "                                              'split_number': int64_feature(split_index+1),\n",
     "                                             })\n",
     "\n",
@@ -495,8 +495,8 @@
    "outputs": [],
    "source": [
     "tfrecords_dir = './datasets/tfrecords'\n",
-    "NUM_SHARDS = 5 # for train: 20, for test: 10\n",
-    "N = 5 # for train: 100, for test: 50\n",
+    "NUM_SHARDS = 20 # for train: 20, for test: 10\n",
+    "N = 100 # for train: 100, for test: 50\n",
     "convert_dataset(split_name, tfrecords_dir, N, NUM_SHARDS)"
    ]
   }
