--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -433,9 +433,11 @@
     "        sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
     "        time_step_for_one_example = 44100 * 5 # 5 sec for one example\n",
     "        num_split = int(number_of_samples / time_step_for_one_example)\n",
-    "        print(\"{}th track; num_split: {}\".format(i, num_split))\n",
+    "        print(\"{}th track; num_split: {}\".format(permutation_track_number[i], num_split))\n",
     "\n",
     "        for split_index in range(num_split-1):\n",
+    "          if split_index > 2:\n",
+    "            break\n",
     "          # step 2\n",
     "          for k, wav in enumerate(sources):\n",
     "            wav_split = wav[:, split_index*time_step_for_one_example:(split_index+1)*time_step_for_one_example]\n",
@@ -446,7 +448,7 @@
     "          \n",
     "          time_step = wav_concat.shape[2]\n",
     "          wav_concat_string = wav_concat.tostring()\n",
-    "          print(\"{}th track; {}th split: wav_shape: {}\".format(i, split_index, wav_concat.shape))\n",
+    "          print(\"{}th track; {}th split: wav_shape: {}\".format(permutation_track_number[i], split_index, wav_concat.shape))\n",
     "\n",
     "          # step 3:\n",
     "          features = tf.train.Features(feature={'wav_concat': bytes_feature(wav_concat_string),\n",
@@ -464,7 +466,7 @@
     "        # merge between last split part and residual part\n",
     "        # step 2\n",
     "        for k, wav in enumerate(sources):\n",
-    "          wav_split = wav[:, (split_index+1)*time_step_for_one_example:]\n",
+    "          wav_split = wav[:, (num_split-1)*time_step_for_one_example:]\n",
     "          if k < 1:\n",
     "            wav_concat = np.expand_dims(wav_split, axis=0)\n",
     "          else:\n",
@@ -472,13 +474,13 @@
     "          \n",
     "        time_step = wav_concat.shape[2]\n",
     "        wav_concat_string = wav_concat.tostring()\n",
-    "        print(\"{}th track; {}th split: wav_shape: {}\".format(i, split_index+1, wav_concat.shape))\n",
+    "        print(\"{}th track; {}th split: wav_shape: {}\".format(permutation_track_number[i], num_split, wav_concat.shape))\n",
     "\n",
     "        # step 3:\n",
     "        features = tf.train.Features(feature={'wav_concat': bytes_feature(wav_concat_string),\n",
     "                                              'time_step': int64_feature(time_step),\n",
     "                                              'track_number': int64_feature(permutation_track_number[i]),\n",
-    "                                              'split_number': int64_feature(split_index+1),\n",
+    "                                              'split_number': int64_feature(num_split),\n",
     "                                             })\n",
     "\n",
     "        # step 4\n",
@@ -495,7 +497,7 @@
    "outputs": [],
    "source": [
     "tfrecords_dir = './datasets/tfrecords'\n",
-    "NUM_SHARDS = 20 # for train: 20, for test: 10\n",
+    "NUM_SHARDS = 25 # for train: 25, for test: 10\n",
     "N = 100 # for train: 100, for test: 50\n",
     "convert_dataset(split_name, tfrecords_dir, N, NUM_SHARDS)"
    ]
