change save wave file float64 -> float32 and add data augmentation & stft function

--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -394,8 +394,8 @@
     "  # data split\n",
     "  dataset_path = os.path.join(dataset_dir, split_name)\n",
     "  print(dataset_path)\n",
-    "  if not tf.gfile.Exists(dataset_path):\n",
-    "    tf.gfile.MakeDirs(dataset_path)\n",
+    "  if not tf.io.gfile.exists(dataset_path):\n",
+    "    tf.io.gfile.makedirs(dataset_path)\n",
     "  \n",
     "  # for data suffling\n",
     "  permutation_track_number = np.random.permutation(N)\n",
@@ -407,7 +407,7 @@
     "    print('Writing', output_filename)\n",
     "\n",
     "    # step 1\n",
-    "    with tf.python_io.TFRecordWriter(output_filename) as tfrecord_writer:\n",
+    "    with tf.io.TFRecordWriter(output_filename) as tfrecord_writer:\n",
     "      start_ndx = shard_id * num_per_shard\n",
     "      end_ndx = min((shard_id+1) * num_per_shard, N)\n",
     "\n",
@@ -431,6 +431,11 @@
     "        assert (num_channels, number_of_samples) == accompaniments.shape\n",
     "\n",
     "        sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
+    "        for source in sources:\n",
+    "          source = source.astype(np.float32)\n",
+    "          \n",
+    "        print(type(source[0][0, 0]))\n",
+    "          \n",
     "        time_step_for_one_example = 44100 * 5 # 5 sec for one example\n",
     "        num_split = int(number_of_samples / time_step_for_one_example)\n",
     "        print(\"{}th track; num_split: {}\".format(permutation_track_number[i], num_split))\n",
