--- a/spectrogram_channels_U-net.ipynb
+++ b/spectrogram_channels_U-net.ipynb
@@ -32,6 +32,8 @@
     "import time\n",
     "import glob\n",
     "\n",
+    "import collections\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -42,9 +44,9 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
-    "tf.enable_eager_execution()\n",
+    "#tf.enable_eager_execution()\n",
     "\n",
-    "tf.logging.set_verbosity(tf.logging.INFO)\n",
+    "#tf.logging.set_verbosity(tf.logging.INFO)\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
    ]
@@ -61,9 +63,9 @@
     "max_epochs = 200\n",
     "save_model_epochs = 20\n",
     "print_steps = 1\n",
-    "batch_size = 8\n",
+    "batch_size = 4\n",
     "learning_rate = 2e-4\n",
-    "N = 100 # number of samples in train_dataset\n",
+    "N = 10000 # about number of samples in train_dataset\n",
     "\n",
     "BUFFER_SIZE = N"
    ]
@@ -81,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = './datasets/spectrogram/'\n",
+    "data_path = './datasets/tfrecords/'\n",
     "train_data_filenames = [os.path.join(data_path, 'train', name)\n",
     "                        for name in os.listdir(os.path.join(data_path, 'train')) if 'tfrecord' in name]\n",
     "for name in train_data_filenames:\n",
@@ -102,26 +104,24 @@
     "# Transforms a scalar string `example_proto` into a pair of a scalar string and\n",
     "# a scalar integer, representing an spectragram and corresponding informations, respectively.\n",
     "def _parse_function(example_proto):\n",
-    "  features = {'spec_raw': tf.FixedLenFeature([], tf.string, default_value=\"\"),\n",
-    "              'frequency_bin': tf.FixedLenFeature([], tf.int64, default_value=0),\n",
-    "              'time_step': tf.FixedLenFeature([], tf.int64, default_value=0),\n",
-    "              'channel': tf.FixedLenFeature([], tf.string, default_value=\"\"),\n",
-    "              'track_number': tf.FixedLenFeature([], tf.int64, default_value=0),\n",
-    "              'split_number': tf.FixedLenFeature([], tf.int64, default_value=0),}\n",
+    "  features = {'wav_concat': tf.io.FixedLenFeature([], tf.string, default_value=\"\"),\n",
+    "              'time_step': tf.io.FixedLenFeature([], tf.int64, default_value=0),\n",
+    "              'track_number': tf.io.FixedLenFeature([], tf.int64, default_value=0),\n",
+    "              'split_number': tf.io.FixedLenFeature([], tf.int64, default_value=0),}\n",
     "  \n",
-    "  parsed_features = tf.parse_single_example(example_proto, features)\n",
+    "  parsed_features = tf.io.parse_single_example(example_proto, features)\n",
     "\n",
-    "  spec_raw = tf.decode_raw(parsed_features[\"spec_raw\"], out_type=tf.float32)\n",
-    "  frequency_bin = tf.cast(parsed_features[\"frequency_bin\"], dtype=tf.int32)\n",
+    "  wav_concat = tf.io.decode_raw(parsed_features[\"wav_concat\"], out_type=tf.float64)\n",
+    "  wav_concat = tf.cast(wav_concat, dtype=tf.float32)\n",
     "  time_step = tf.cast(parsed_features[\"time_step\"], dtype=tf.int32)\n",
-    "  #channel = tf.cast(parsed_features[\"channel\"], dtype=tf.string)\n",
     "  #track_number = tf.cast(parsed_features[\"track_number\"], dtype=tf.int32)\n",
     "  #split_number = tf.cast(parsed_features[\"split_number\"], dtype=tf.int32)\n",
     "  \n",
-    "  num_channels = 6 # for [mixtures, vocals, drums, basses, others, accompaniments]\n",
-    "  spec_raw = tf.reshape(spec_raw, shape=[frequency_bin, time_step, num_channels])\n",
+    "  num_sources = 6 # for [mixtures, vocals, drums, basses, others, accompaniments]\n",
+    "  num_channels = 2 # for left, right\n",
+    "  wav_concat = tf.reshape(wav_concat, shape=[num_sources, num_channels, time_step])\n",
     "\n",
-    "  return spec_raw, time_step"
+    "  return wav_concat, time_step"
    ]
   },
   {
@@ -130,17 +130,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _augmentation_function(spec_raw, time_step):\n",
+    "def _augmentation_function(wav_concat, time_step):\n",
     "  \"\"\"Random cropping for data augmentation\n",
+    "  We set that the input (spectrogram) shape is (num_frames, frequency_bin) = (128, 1024).\n",
+    "  Number of samples to needed: 128 x 512 (hop_size) = 131072\n",
+    "  Time of wave to needed: 131072 / 44100 = 2.97 sec\n",
     "  \"\"\"\n",
-    "  target_time_step = 128 # our input size\n",
+    "  target_time_step = 131072\n",
     "  available_time_step = time_step - target_time_step\n",
     "  \n",
-    "  crop_index = tf.random_uniform(shape=[]) * tf.cast(available_time_step, dtype=tf.float32)\n",
+    "  crop_index = tf.random.uniform(shape=[]) * tf.cast(available_time_step, dtype=tf.float32)\n",
     "  crop_index = tf.cast(crop_index, dtype=tf.int32)\n",
-    "  spec_raw_crop = spec_raw[:, crop_index:crop_index+target_time_step, :]\n",
+    "  wav_concat_crop = wav_concat[:, :, crop_index:crop_index+target_time_step]\n",
     "  \n",
-    "  return spec_raw_crop[..., 0:1], spec_raw_crop[..., 1:]"
+    "  return wav_concat_crop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _stft(wav, sources_to_wanted):\n",
+    "  \"\"\"Short time Fourier Transform\n",
+    "  \n",
+    "  Args:\n",
+    "    wav: Tens\n",
+    "    sources_to_wanted: list of name of sources to wanted\n",
+    "        - full source names: ['vocals', 'drums', 'basses', 'others', 'accompaniments']\n",
+    "        \n",
+    "  Returns:\n",
+    "    stft: The results of stft of input wav\n",
+    "  \"\"\"\n",
+    "  num = collections.OrderedDict()\n",
+    "  num['vocals'] = 1\n",
+    "  num['drums'] = 2\n",
+    "  num['basses'] = 3\n",
+    "  num['others'] = 4\n",
+    "  num['accompaniments'] = 5\n",
+    "  \n",
+    "  wav_to_wanted = collections.OrderedDict()\n",
+    "  wav_to_wanted['mixtures'] = wav[0]\n",
+    "  for key, value in num.items():\n",
+    "    if key in sources_to_wanted:\n",
+    "      wav_to_wanted[key] = wav[value]  \n",
+    "      \n",
+    "  stfts = []\n",
+    "  for key, wav in wav_to_wanted.items():\n",
+    "    stfts.append(tf.signal.stft(wav,\n",
+    "                                frame_length=2048,\n",
+    "                                frame_step=512,\n",
+    "                                fft_length=2048,\n",
+    "                                pad_end=True))\n",
+    "\n",
+    "  return stfts[0], tf.concat(stfts[1:], axis=0)"
    ]
   },
   {
@@ -152,8 +196,24 @@
     "train_dataset = tf.data.TFRecordDataset(train_data_filenames)\n",
     "train_dataset = train_dataset.map(_parse_function)\n",
     "train_dataset = train_dataset.map(_augmentation_function)\n",
+    "extracted_sources_list = ['vocals', 'accompaniments']\n",
+    "train_dataset = train_dataset.map(lambda x: _stft(x, extracted_sources_list))\n",
     "train_dataset = train_dataset.shuffle(BUFFER_SIZE)\n",
     "train_dataset = train_dataset.batch(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To test for batch\n",
+    "for mixtures, targets in train_dataset.take(3):\n",
+    "  start_time = time.time()\n",
+    "  print(mixtures.shape)\n",
+    "  print(targets.shape)\n",
+    "  print(\"duration: {} sec\".format(time.time() - start_time))"
    ]
   },
   {
