change typo and version 2.0 style

--- a/convert_to_tfrecords.ipynb
+++ b/convert_to_tfrecords.ipynb
@@ -430,19 +430,18 @@
     "        assert (num_channels, number_of_samples) == others.shape\n",
     "        assert (num_channels, number_of_samples) == accompaniments.shape\n",
     "\n",
-    "        sources = [mixtures, vocals, drums, basses, others, accompaniments]\n",
-    "        for source in sources:\n",
-    "          source = source.astype(np.float32)\n",
-    "          \n",
-    "        print(type(source[0][0, 0]))\n",
+    "        sources = [mixtures.astype(np.float32),\n",
+    "                   vocals.astype(np.float32),\n",
+    "                   drums.astype(np.float32),\n",
+    "                   basses.astype(np.float32),\n",
+    "                   others.astype(np.float32),\n",
+    "                   accompaniments.astype(np.float32)]\n",
     "          \n",
     "        time_step_for_one_example = 44100 * 5 # 5 sec for one example\n",
     "        num_split = int(number_of_samples / time_step_for_one_example)\n",
     "        print(\"{}th track; num_split: {}\".format(permutation_track_number[i], num_split))\n",
     "\n",
     "        for split_index in range(num_split-1):\n",
-    "          if split_index > 2:\n",
-    "            break\n",
     "          # step 2\n",
     "          for k, wav in enumerate(sources):\n",
     "            wav_split = wav[:, split_index*time_step_for_one_example:(split_index+1)*time_step_for_one_example]\n",
